--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#" class="btn">Download CV</a>
                 </div>
                 <div class="about-img">
-                    <img src="c:\Users\milin\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\IMG-20250419-WA0006.jpg" alt="Profile Image">
+                    <img src="Photograph.jpg" alt="Profile Image">
                 </div>
             </div>
         </section>
