--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Vibrant Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="atharv.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Animated Background Bubbles -->
@@ -128,7 +128,7 @@
                     <h3>International Youth Maths Championship(IYMC)</h3>
                     <p>Received the prestigious certificate for participating in IYMC</p>
                     <span class="date">30 December 2024</span>
-                    <a href="c:\Users\milin\Downloads\IYMC certificate.pdf" class="btn">View Certificate</a>
+                    <a href="IYMC certificate.pdf" class="btn">View Certificate</a>
                 </div>
                 
                 <div class="achievement-card">
