--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <h3>Cisco [Networking Academy]</h3>Contributed to major ope
                     <p>"Completed Python programming course by Cisco Networking Academy, covering essential programming concepts like variables , data structures , functions , and object-oriented programming  — developing strong problem-solving and coding skills."</p>
                     <span class="date">17 April 2025</span>
-                    <a href="C:\Users\milin\Downloads\ATHARV py1.pdf" class="btn">View Certificate</a>
+                    <a href="ATHARV py1.pdf" class="btn">View Certificate</a>
                 </div>
                 
                 <div class="achievement-card">
